syntax = "proto3";

package generator;
import "google/protobuf/empty.proto";
option go_package = "github.com/Bazhenator/generator";

service GeneratorService {
  rpc StartGenerator(StartGeneratorIn) returns (google.protobuf.Empty); // generates requests for cleaning service
}

message StartGeneratorIn {
  uint64 requests_amount = 1;
}